<resources>
    <string name="app_name">Emo RFC</string>
    <string name="playerBtn">View Players</string>
    <string name="managerBtn">Manager</string>
    <string name="mainSubTitle">Please select weather you are a manager, player or search</string>
    <string name="mainTitle">Welcome to Emo RFC App</string>
    <string name="managerLoginBtn">Login</string>
    <string name="managerPasswordTxt">Password</string>
    <string name="managerNameTxt">Name</string>
    <string name="managerLogTitle">Please Login</string>
    <string name="playerNameTxt">Name</string>
    <string name="playerPasswordTxt">Password</string>
    <string name="playerLoginButton">Login</string>
    <string name="createPlayerBtn">Create Player</string>
    <string name="playerMainBtn">Player</string>
    <string name="editPlayerBtn">Delete Player</string>
    <string name="createMatchBtn">Create Match</string>
    <string name="deleteMatchBtn">Delete Match</string>
    <string name="searchEditText">Search</string>
    <string name="searchList"></string>
    <string name="searchBtn">Search Matches</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapBtn">View Match Locations</string>
    <string name="registerBtn">Register</string>
    <string name="submitBtn">Submit</string>
    <string name="createMngrNameTxt" />
    <string name="createMngrPasswordTxt" />


</resources>
